# ios-media-toolkit

./: .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: global.yaml
docs/: dolby-vision-tools.md
src/ios_media_toolkit/: __init__.py  classifier.py  cli.py  config.py  constants.py  encoder.py  grouper.py  manifest.py  profiles.py  scanner.py  setup_tools.py  syncer.py  verifier.py
src/ios_media_toolkit/actions/: __init__.py  classify.py  copy.py  scan.py  transcode.py  verify.py
src/ios_media_toolkit/dng/: __init__.py  detector.py  jxl_compressor.py  preview_extractor.py  profiles.py
src/ios_media_toolkit/runners/: __init__.py  base.py  sequential.py
src/ios_media_toolkit/workflow/: __init__.py  archive.py  tasks.py
tests/: __init__.py  conftest.py  test_actions.py  test_assets.py  test_classifier.py  test_cli.py  test_config.py  test_dng.py  test_e2e.py  test_encoder.py  test_grouper.py  test_manifest.py  test_runner_base.py  test_scanner.py  test_sequential.py  test_setup_tools.py  test_syncer.py  test_verifier.py  test_workflow.py
tests/assets/: IMG_5063.DNG  IMG_5063.XMP  IMG_5065.MOV
